<resources>
    <string name="app_name">NMedia1.0</string>
    <string name="title_logo" translatable="false">Нетология. Университет интернет-профессий для будущего.</string>
    <string name="data_logo" translatable="false">21 мая в 21:09</string>
    <string name="menu_logo" translatable="false">menu</string>
    <string name="text_content" translatable="false">Как сдавать задачиОткройте ваш проект с предыдущего ДЗ Сделайте необходимые коммитыСделайте пуш (удостоверьтесь, что ваш код появился на GitHub) Ссылку на ваш проект отправьте в личном кабинете на сайте netology. Задачи, отмеченные, как необязательные, можно не сдавать, это не повлияет на получение зачета (в этом ДЗ все задачи являются обязательными)</string>
    <string name="number_test" translatable="false">12</string>
    <string name="image" translatable="false">image</string>
    <string name="remove">Remove</string>
    <string name="post_text" translatable="false">Post Text</string>
    <string name="send" translatable="false">send</string>
    <string name="error_edit">Content can`t be empty</string>
    <string name="close">close</string>
    <string name="edit">Edit</string>
    <string name="edit_message">Edit Message</string>
    <string name="like" translatable="false">Like</string>
    <string name="share">Share</string>
    <string name="choose_share_post">Choose share post</string>
    <string name="blank_message_error" translatable="false">Ошибка получения!</string>
    <string name="enter_text">Enter Text</string>
    <string name="add">Add</string>
    <string name="new_post">New Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="enter_video">Enter link for video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="channel_remote_name" translatable="false">Server Notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="notification_user_liked">%1s I liked the post %2s</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_new_post">%1s posted a new post:</string>
    <string name="notification_exception">Update app!</string>
    <string name="error_loading">Error loading</string>
    <string name="retry_loading">Retry loading</string>
    <string name="empty_post">Empty post</string>
    <string name="add_post">Add post</string>
    <string name="empty_posts">empty_posts</string>
    <string name="error_service">Пошло что-то не так, обновите приложение!</string>
</resources>