<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/common_spacing"
            android:text="@string/new_post" />

        <EditText
            android:id="@+id/textPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="?actionBarSize"
            android:autofillHints="no"
            android:hint="@string/enter_text"
            android:inputType="textMultiLine"
            android:padding="16dp" />

        <EditText
            android:id="@+id/videoPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="?actionBarSize"
            android:autofillHints="no"
            android:hint="@string/enter_video"
            android:inputType="textMultiLine"
            android:padding="16dp" />
    </LinearLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/abbBar"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/abbBar"
        app:srcCompat="@drawable/ic__check_32"
        android:contentDescription="@string/add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>