<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/common_spacing"
    tools:context=".activity.AppActivity">

    <ImageView
        android:id="@+id/iconHeader"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/barrierHeader"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        tools:srcCompat="@drawable/ic_netology"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/titleHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/light_sea_green"
        app:layout_constraintBottom_toTopOf="@+id/dataHeader"
        app:layout_constraintEnd_toStartOf="@id/menuHeader"
        app:layout_constraintStart_toEndOf="@+id/iconHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/title_logo" />

    <TextView
        android:id="@+id/dataHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintStart_toEndOf="@+id/iconHeader"
        app:layout_constraintTop_toBottomOf="@+id/titleHeader"
        app:layout_constraintBottom_toTopOf="@+id/barrierHeader"
        tools:text="@string/data_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/barrierHeader"
        android:layout_marginEnd="@dimen/margin_icon_number"
        android:layout_marginStart="@dimen/margin_icon_number"
        app:icon="@drawable/ic_menu_24"
        android:contentDescription="@string/menu_logo"
        style="@style/Widget.AppTheme.IconButton"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="dataHeader, iconHeader, menuHeader"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids=" ibVideoIcon,ibVideo"
        app:layout_constraintBottom_toTopOf="@+id/textContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierHeader" />


    <ImageButton
        android:id="@+id/ibVideo"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_video"
        app:layout_constraintBottom_toTopOf="@+id/textContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierHeader" />

    <ImageButton
        android:id="@+id/ibVideoIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_play_circle_outline_48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierHeader"
        app:layout_constraintBottom_toTopOf="@+id/textContent" />


    <TextView
        android:id="@+id/textContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibVideo"
        app:layout_constraintBottom_toTopOf="@+id/postImage"
        tools:text="@string/text_content" />

<!--    <ImageView-->
<!--        android:id="@+id/postImage2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:scaleType="center"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/textImage"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textContent"-->
<!--        tools:srcCompat="@tools:sample/backgrounds/scenic" />-->


    <androidx.constraintlayout.widget.Group
        android:id="@+id/imageGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:constraint_referenced_ids="postImage, textImage" />


    <ImageView
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/textImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textContent"
        tools:srcCompat="@drawable/background_video" />

    <TextView
        android:id="@+id/textImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/barrierFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImage"
        android:layout_margin="@dimen/common_spacing"
        tools:text="Текст картинки" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ibLike, ibShare, ibViews"
        app:barrierDirection="top" />

<!--    <com.google.android.material.checkbox.MaterialCheckBox-->
<!--        android:id="@+id/ibLike"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/barrierFooter"-->
<!--        android:button="@drawable/ic_like_24dp"-->
<!--        android:contentDescription="@string/like"-->
<!--        style="@style/Widget.AppTheme.LikeCheckBox"/>-->


    <com.google.android.material.button.MaterialButton
        android:id="@+id/ibLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:layout_marginTop="@dimen/margin_icon_number"
        android:layout_marginStart="@dimen/margin_icon_number"
        android:contentDescription="@string/like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierFooter"
        tools:text="@string/number_test"
        app:icon="@drawable/ic_like_24dp"
        style="@style/Widget.AppTheme.LikeCheckBox"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ibShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share"
        app:layout_constraintStart_toEndOf="@id/ibLike"
        app:layout_constraintTop_toBottomOf="@+id/barrierFooter"
        android:layout_marginTop="@dimen/margin_icon_number"
        android:layout_marginStart="@dimen/margin_icon_number"
        app:icon="@drawable/ic_baseline_share_24"
        tools:text="@string/number_test"
        style="@style/Widget.AppTheme.IconButton"/>

    <ImageView
        android:id="@+id/ibViews"
        android:layout_width="@dimen/icon_size_content"
        android:layout_height="@dimen/icon_size_content"
        app:layout_constraintEnd_toStartOf="@id/txViews"
        app:layout_constraintTop_toBottomOf="@+id/barrierFooter"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/margin_icon_number"
        android:src="@drawable/ic_baseline_visibility_24"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/txViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierFooter"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintTop_toTopOf="@+id/ibViews"
        app:layout_constraintBottom_toBottomOf="@+id/ibViews"
        tools:text="@string/number_test" />

    </androidx.constraintlayout.widget.ConstraintLayout>